--- a/src/main/resources/templates/process/processInstance.html
+++ b/src/main/resources/templates/process/processInstance.html
@@ -143,8 +143,8 @@
                 <i class="fas fa-spinner mr-1"></i> Running
               </div>
               <div class="flex items-center gap-2">
-                <a th:href="@{'/tasks/' + ${process.processDefinitionKey}}" class="text-blue-600 hover:text-blue-700 text-sm font-medium" style="text-decoration:none">
-                  View
+                <a th:href="@{'/tasks/fullList/' + ${process.processInstanceId}}" class="text-blue-600 hover:text-blue-700 text-sm font-medium" style="text-decoration:none">
+                  View Details
                 </a>
                 <div class="relative">
                   <a class="process-modal-toggle" style="text-decoration:none" th:data-fragment="@{'/processes/processInstance/' + ${process.id}}"
