--- a/src/main/resources/templates/task/list.html
+++ b/src/main/resources/templates/task/list.html
@@ -59,7 +59,7 @@
                                 <a th:if="${task.state == 'created'}" th:href="@{'/tasks/add/'+${task.id}}" class="dropdown-item">
                                     <span>Claim Task</span>
                                 </a>
-                                <a th:if="${task.state != 'created'}" th:href="@{'/tasks/add/'+${task.id}}" class="dropdown-item">
+                                <a th:if="${task.state != 'created'}" th:href="@{'/tasks/completed/'+${task.id}}" class="dropdown-item">
                                     <span>View</span>
                                 </a>
                             </div>
